--- a/prompts/txt_to_json.ipynb
+++ b/prompts/txt_to_json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "31c6450b",
    "metadata": {},
    "outputs": [],
@@ -20,9 +20,10 @@
     "    \"manipulations/manipulation_single_tabular\": \"You are an expert in manipulation and transformation of textual data.\",\n",
     "    \"comparison/check_for_contradictions\": \"You are an expert at comparing documents with each other.\",\n",
     "    \"comparison/extract_contradictions\": \"You are an expert at comparing documents with each other.\",\n",
+    "    \"manipulations/keypoints\": \"You are an expert at extracting and generating keywords.\",\n",
     "}\n",
     "\n",
-    "filename = \"comparison/extract_contradictions\"\n",
+    "filename = \"manipulations/keypoints\"\n",
     "\n",
     "system_prompt = system_prompts[filename]\n",
     "\n",
