--- a/data/manipulate_data.ipynb
+++ b/data/manipulate_data.ipynb
@@ -484,7 +484,7 @@
     "    queries.to_csv(queries_path, index=False)\n",
     "\n",
     "\n",
-    "generate_keypoints(\"additional_data/queries/single_tabular_manipulations.csv\")"
+    "# generate_keypoints()"
    ]
   }
  ],
