--- a/prompts/txt_to_json.ipynb
+++ b/prompts/txt_to_json.ipynb
@@ -21,9 +21,11 @@
     "    \"comparison/check_for_contradictions\": \"You are an expert at comparing documents with each other.\",\n",
     "    \"comparison/extract_contradictions\": \"You are an expert at comparing documents with each other.\",\n",
     "    \"manipulations/keypoints\": \"You are an expert at extracting and generating keywords.\",\n",
+    "    \"qa/qa_with_dq\": \"You are an expert in answering questions from context.\",\n",
+    "    \"qa/qa_without_dq\": \"You are an expert in answering questions from context.\",\n",
     "}\n",
     "\n",
-    "filename = \"manipulations/keypoints\"\n",
+    "filename = \"qa/qa_with_dq\"\n",
     "\n",
     "system_prompt = system_prompts[filename]\n",
     "\n",
