--- a/x-analyze_data.ipynb
+++ b/x-analyze_data.ipynb
@@ -2,6 +2,95 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "993a74d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[90m[\u001b[0m2025-06-15T14:59:54Z \u001b[33mWARN \u001b[0m lance::dataset::scanner\u001b[90m]\u001b[0m nprobes is not set because nearest has not been called yet\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>vector</th>\n",
+       "      <th>id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>metadata</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[0.0062206797, -3.3415166e-05, 0.023444567, 0....</td>\n",
+       "      <td>2457</td>\n",
+       "      <td>Hospitalization Record\\n\\nBasic Information:\\n...</td>\n",
+       "      <td>{'chunk_id': 2457, 'creation_date': 2000-01-01...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              vector    id  \\\n",
+       "0  [0.0062206797, -3.3415166e-05, 0.023444567, 0....  2457   \n",
+       "\n",
+       "                                                text  \\\n",
+       "0  Hospitalization Record\\n\\nBasic Information:\\n...   \n",
+       "\n",
+       "                                            metadata  \n",
+       "0  {'chunk_id': 2457, 'creation_date': 2000-01-01...  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lancedb\n",
+    "\n",
+    "import lancedb\n",
+    "import importlib\n",
+    "from langchain.vectorstores import LanceDB\n",
+    "from langchain.embeddings import OpenAIEmbeddings\n",
+    "\n",
+    "# DB specifications\n",
+    "LANCEDB_DIR = \"/Users/leon/Documents/study/MA/lancedb\"\n",
+    "TABLE_NAME_DOCS = \"documents\"\n",
+    "TABLE_NAME_CHUNKS = \"chunks\"\n",
+    "\n",
+    "db = lancedb.connect(LANCEDB_DIR)\n",
+    "\n",
+    "table = db.open_table(TABLE_NAME_CHUNKS)\n",
+    "\n",
+    "res = table.search().where(\"id = 2457\").to_pandas()\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "id": "f57fee14",
    "metadata": {},
