--- a/4-retrieve_and_generate.ipynb
+++ b/4-retrieve_and_generate.ipynb
@@ -236,10 +236,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "94e52dd4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/leon/miniconda3/envs/ma/lib/python3.12/site-packages/requests/__init__.py:86: RequestsDependencyWarning: Unable to find acceptable character detection dependency (chardet or charset_normalizer).\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import ast\n",
@@ -280,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "484c5a81",
    "metadata": {},
    "outputs": [
@@ -306,6 +315,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>ground_truth.keypoints</th>\n",
+       "      <th>query.content</th>\n",
        "      <th>generated_response</th>\n",
        "      <th>keypoints_hit_ratio_by_human_eval</th>\n",
        "    </tr>\n",
@@ -314,30 +324,35 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>[\"JetWing Aviation's total liabilities amounte...</td>\n",
+       "      <td>What was the total amount of JetWing Aviation'...</td>\n",
        "      <td>$250 million</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>['Mr. John Doe was appointed as CEO of ABC Edu...</td>\n",
+       "      <td>Who was appointed as CEO of ABC Education Corp...</td>\n",
        "      <td>Mr. John Doe was appointed as CEO of ABC Educa...</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>[\"V. Lewis's chief complaint is fever, cough, ...</td>\n",
+       "      <td>According to the hospitalization records of Ne...</td>\n",
        "      <td>Fever, cough, and chest pain for 5 days.</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>[\"H. Walker's birthdate is 19th July, 1964 acc...</td>\n",
+       "      <td>According to the court judgment of Riverton, H...</td>\n",
        "      <td>18th July, 1964</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>['The residence of Z. Torres was 22, Maple Ave...</td>\n",
+       "      <td>According to the court judgment of Sterling, Q...</td>\n",
        "      <td>22, Maple Avenue, Quarryville</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
@@ -346,40 +361,46 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199</th>\n",
        "      <td>['Retail Emporium uses a risk management syste...</td>\n",
+       "      <td>What system does Retail Emporium have in place...</td>\n",
        "      <td>Retail Emporium conducts regular audits and ri...</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>200</th>\n",
        "      <td>['Retail Emporium was established in November ...</td>\n",
+       "      <td>When was Retail Emporium established?</td>\n",
        "      <td>Retail Emporium was established in November 2005.</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>201</th>\n",
        "      <td>['Retail Emporium distributed a dividend of $4...</td>\n",
+       "      <td>How much dividend did Retail Emporium distribu...</td>\n",
        "      <td>$4 million</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>202</th>\n",
        "      <td>['Retail Emporium opened three new stores in M...</td>\n",
+       "      <td>How many new stores did Retail Emporium open i...</td>\n",
        "      <td>Five new stores.</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>203</th>\n",
        "      <td>[\"Retail Emporium's operating income in 2020 w...</td>\n",
+       "      <td>What was Retail Emporium's operating income in...</td>\n",
        "      <td>Retail Emporium's operating income in 2020 was...</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>204 rows × 3 columns</p>\n",
+       "<p>204 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -395,6 +416,19 @@
        "201  ['Retail Emporium distributed a dividend of $4...   \n",
        "202  ['Retail Emporium opened three new stores in M...   \n",
        "203  [\"Retail Emporium's operating income in 2020 w...   \n",
+       "\n",
+       "                                         query.content  \\\n",
+       "0    What was the total amount of JetWing Aviation'...   \n",
+       "1    Who was appointed as CEO of ABC Education Corp...   \n",
+       "2    According to the hospitalization records of Ne...   \n",
+       "3    According to the court judgment of Riverton, H...   \n",
+       "4    According to the court judgment of Sterling, Q...   \n",
+       "..                                                 ...   \n",
+       "199  What system does Retail Emporium have in place...   \n",
+       "200              When was Retail Emporium established?   \n",
+       "201  How much dividend did Retail Emporium distribu...   \n",
+       "202  How many new stores did Retail Emporium open i...   \n",
+       "203  What was Retail Emporium's operating income in...   \n",
        "\n",
        "                                    generated_response  \\\n",
        "0                                         $250 million   \n",
@@ -422,25 +456,29 @@
        "202                                    \n",
        "203                                    \n",
        "\n",
-       "[204 rows x 3 columns]"
+       "[204 rows x 4 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Prepare for human-based completeness evaluation\n",
+    "filepath = \"evaluation/_queries_with_context_without_DQ_5_generations.csv\"\n",
     "\n",
     "data = pd.read_csv(\n",
-    "    \"evaluation/_queries_with_context_without_DQ_5_generations.csv\",\n",
-    "    usecols=[\"ground_truth.keypoints\", \"generated_response\"],\n",
+    "    filepath,\n",
+    "    usecols=[\"query.content\", \"ground_truth.keypoints\", \"generated_response\"],\n",
     ")\n",
     "\n",
     "data[\"keypoints_hit_ratio_by_human_eval\"] = [\"\" for i in range(len(data))]\n",
     "\n",
-    "# data.to_csv(\"evaluation/human_feedback/_queries_with_context_without_DQ_5_generations.csv\")\n",
+    "data.to_csv(\n",
+    "    filepath,\n",
+    "    columns=[\"query.content\", \"ground_truth.keypoints\", \"generated_response\", \"keypoints_hit_ratio_by_human_eval\"],\n",
+    ")\n",
     "data"
    ]
   }
