clean start before eval

--- a/4-retrieve_and_generate.ipynb
+++ b/4-retrieve_and_generate.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "484c5a81",
    "metadata": {},
    "outputs": [
@@ -478,6 +478,7 @@
     "data.to_csv(\n",
     "    filepath,\n",
     "    columns=[\"query.content\", \"ground_truth.keypoints\", \"generated_response\", \"keypoints_hit_ratio_by_human_eval\"],\n",
+    "    index=False,\n",
     ")\n",
     "data"
    ]
