--- a/prompts/txt_to_json.ipynb
+++ b/prompts/txt_to_json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "31c6450b",
    "metadata": {},
    "outputs": [],
@@ -20,12 +20,13 @@
     "    \"manipulations/manipulation_single_tabular\": \"You are an expert in manipulation and transformation of textual data.\",\n",
     "    \"comparison/check_for_contradictions\": \"You are an expert at comparing documents with each other.\",\n",
     "    \"comparison/extract_contradictions\": \"You are an expert at comparing documents with each other.\",\n",
-    "    \"manipulations/keypoints\": \"You are an expert at extracting and generating keywords.\",\n",
+    "    \"keypoints/keypoints_generation\": \"You are an expert at extracting and generating keywords.\",\n",
+    "    \"keypoints/keypoints_validation\": \"You are an expert at validating keypoint coverage in question answering.\",\n",
     "    \"qa/qa_with_dq\": \"You are an expert in answering questions from context.\",\n",
     "    \"qa/qa_without_dq\": \"You are an expert in answering questions from context.\",\n",
     "}\n",
     "\n",
-    "filename = \"qa/qa_with_dq\"\n",
+    "filename = \"keypoints/keypoints_validation\"\n",
     "\n",
     "system_prompt = system_prompts[filename]\n",
     "\n",
