remove index from _generations

--- a/4-retrieve_and_generate.ipynb
+++ b/4-retrieve_and_generate.ipynb
@@ -174,69 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
-   "id": "9ac0986b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.7303921568627451\n",
-      "0.6225490196078431\n"
-     ]
-    }
-   ],
-   "source": [
-    "from langchain_core.load import loads\n",
-    "import ast\n",
-    "import numpy as np\n",
-    "import string\n",
-    "from typing import Literal\n",
-    "\n",
-    "\n",
-    "def calculate_recall(\n",
-    "    top_k: int, with_dq: bool = True, print_info_if_wrong: bool = False, emb: Literal[\"_large\", \"\"] = \"\"\n",
-    "):\n",
-    "    filename = (\n",
-    "        f\"evaluation/_queries_with_context_with_DQ_{top_k}.csv\"\n",
-    "        if with_dq\n",
-    "        else f\"evaluation/_queries_with_context_without_DQ_{top_k}.csv\"\n",
-    "    )\n",
-    "    data = pd.read_csv(\n",
-    "        filename,\n",
-    "        converters={\"context\": ast.literal_eval, \"ground_truth.references\": ast.literal_eval},\n",
-    "    )\n",
-    "    data[\"context\"] = data[\"context\"].apply(lambda chunks: [loads(c) for c in chunks])\n",
-    "\n",
-    "    hits = []\n",
-    "    for _, row in data.iterrows():\n",
-    "        complete_context_txt = \"\\n\".join([chunk.page_content for chunk in row[\"context\"]]).lower()\n",
-    "        hit_in_row = True\n",
-    "        for ref in row[\"ground_truth.references\"]:\n",
-    "            hit_in_row = hit_in_row and (ref.lower().strip() in complete_context_txt)\n",
-    "            if print_info_if_wrong and (not (ref.lower().strip().strip(string.punctuation) in complete_context_txt)):\n",
-    "                print(\"------\")\n",
-    "                print(f\"{row[\"query.content\"]}: {row[\"ground_truth.content\"]}, {row[\"ground_truth.doc_ids\"]}\")\n",
-    "                print(\"Reference:\")\n",
-    "                print(ref.lower().strip())\n",
-    "                print()\n",
-    "                print(\"Metadata:\")\n",
-    "                print(\"\\n\".join([str(c.metadata) for c in row[\"context\"]]))\n",
-    "                print(\"Context:\")\n",
-    "                print(\"\\n- \".join([c.page_content for c in row[\"context\"]]))\n",
-    "        hits.append(hit_in_row)\n",
-    "    recall = np.mean(hits)\n",
-    "    return recall\n",
-    "\n",
-    "\n",
-    "print(calculate_recall(5, with_dq=True))\n",
-    "print(calculate_recall(5, with_dq=False))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "94e52dd4",
    "metadata": {},
    "outputs": [
@@ -280,7 +218,7 @@
     "def produce_generations(queries_path: str):\n",
     "    queries = pd.read_csv(queries_path, converters={\"context\": ast.literal_eval})\n",
     "    queries[\"generated_response\"] = queries.apply(generate, axis=1)\n",
-    "    queries.to_csv(f\"{queries_path.split(\".\")[0]}_generations.csv\")\n",
+    "    queries.to_csv(f\"{queries_path.split(\".\")[0]}_generations.csv\", index=False)\n",
     "\n",
     "\n",
     "# produce_generations(\"evaluation/_queries_with_context_with_DQ_5.csv\")\n",
@@ -482,6 +420,14 @@
     ")\n",
     "data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d4a085a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
