--- a/5-evaluate.ipynb
+++ b/5-evaluate.ipynb
@@ -101,18 +101,61 @@
    "execution_count": null,
    "id": "7ec5bd57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True]\n",
+      "1.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0    None\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "### Generate keypoint coverage estimation\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import ast\n",
+    "import importlib\n",
+    "from utils import llm, io_helpers\n",
     "\n",
-    "filename = \"evaluation/_queries_without_context_with_DQ_5_generations.csv\"\n",
+    "importlib.reload(llm)\n",
     "\n",
-    "data = pd.read_csv(filename)\n",
-    "data = data.drop(columns=[\"index\"])\n",
+    "filename = \"evaluation/_queries_with_context_without_DQ_5_generations.csv\"\n",
+    "filename_new = \"evaluation/keypoint_eval/_queries_with_context_without_DQ_5_generations.csv\"\n",
     "\n",
-    "data.to_csv(filename, index=False)"
+    "\n",
+    "def calc_keypoint_coverage(row, model: str = \"gpt-4.1\"):\n",
+    "    question = row[\"query.content\"]\n",
+    "    keypoints = row[\"ground_truth.keypoints\"]\n",
+    "    generated_answer = row[\"generated_response\"]\n",
+    "\n",
+    "    system_prompt, user_prompt = io_helpers.get_prompts(\"keypoints/keypoints_validation\")\n",
+    "    user_prompt = llm.format_user_prompt_keypoint_validation(\n",
+    "        user_prompt, question=question, keypoints=keypoints, generated_answer=generated_answer\n",
+    "    )\n",
+    "\n",
+    "    response = llm.call_any_llm(\n",
+    "        system_prompt, user_prompt, model=model, response_format_pydantic=llm.LLMKeypointEvaluationResponse\n",
+    "    )\n",
+    "\n",
+    "    print(response.keypoint_coverage)\n",
+    "    print(np.mean(response.keypoint_coverage))\n",
+    "\n",
+    "\n",
+    "data = pd.read_csv(filename, converters={\"ground_truth.keypoints\": ast.literal_eval})\n",
+    "data_with_keypoints = data.head(1).apply(calc_keypoint_coverage, axis=1)"
    ]
   }
  ],
