--- a/4-retrieve_and_generate.ipynb
+++ b/4-retrieve_and_generate.ipynb
@@ -404,18 +404,16 @@
    ],
    "source": [
     "# Prepare for human-based completeness evaluation\n",
-    "filepath = \"evaluation/_queries_with_context_without_DQ_5_generations.csv\"\n",
+    "filepath = \"evaluation/keypoint_eval/_queries_with_context_with_DQ_5_generations.csv\"\n",
+    "filepath_new = \"evaluation/keypoint_eval/with_DQ.csv\"\n",
     "\n",
     "data = pd.read_csv(\n",
     "    filepath,\n",
-    "    usecols=[\"query.content\", \"ground_truth.keypoints\", \"generated_response\"],\n",
+    "    usecols=[\"query.content\", \"ground_truth.keypoints\", \"generated_response\", \"keypoint_coverage\"],\n",
     ")\n",
     "\n",
-    "data[\"keypoints_hit_ratio_by_human_eval\"] = [\"\" for i in range(len(data))]\n",
-    "\n",
     "data.to_csv(\n",
-    "    filepath,\n",
-    "    columns=[\"query.content\", \"ground_truth.keypoints\", \"generated_response\", \"keypoints_hit_ratio_by_human_eval\"],\n",
+    "    filepath_new,\n",
     "    index=False,\n",
     ")\n",
     "data"
