--- a/5-evaluate.ipynb
+++ b/5-evaluate.ipynb
@@ -132,8 +132,8 @@
     "\n",
     "importlib.reload(llm)\n",
     "\n",
-    "filename = \"evaluation/_queries_with_context_without_DQ_5_generations.csv\"\n",
-    "filename_new = \"evaluation/keypoint_eval/_queries_with_context_without_DQ_5_generations.csv\"\n",
+    "filename = \"evaluation/_queries_with_context_with_DQ_5_generations.csv\"\n",
+    "filename_new = \"evaluation/keypoint_eval/_queries_with_context_with_DQ_5_generations.csv\"\n",
     "\n",
     "\n",
     "def calc_keypoint_coverage(row, model: str = \"gpt-4.1\"):\n",
@@ -150,12 +150,13 @@
     "        system_prompt, user_prompt, model=model, response_format_pydantic=llm.LLMKeypointEvaluationResponse\n",
     "    )\n",
     "\n",
-    "    print(response.keypoint_coverage)\n",
-    "    print(np.mean(response.keypoint_coverage))\n",
+    "    return np.mean(response.keypoint_coverage).item()\n",
     "\n",
     "\n",
     "data = pd.read_csv(filename, converters={\"ground_truth.keypoints\": ast.literal_eval})\n",
-    "data_with_keypoints = data.head(1).apply(calc_keypoint_coverage, axis=1)"
+    "data[\"keypoint_coverage\"] = data.apply(calc_keypoint_coverage, axis=1)\n",
+    "\n",
+    "data.to_csv(filename_new, index=False)"
    ]
   }
  ],
