generate keypoint eval

--- a/4-retrieve_and_generate.ipynb
+++ b/4-retrieve_and_generate.ipynb
@@ -255,7 +255,7 @@
        "      <th>ground_truth.keypoints</th>\n",
        "      <th>query.content</th>\n",
        "      <th>generated_response</th>\n",
-       "      <th>keypoints_hit_ratio_by_human_eval</th>\n",
+       "      <th>keypoint_coverage</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -264,35 +264,35 @@
        "      <td>[\"JetWing Aviation's total liabilities amounte...</td>\n",
        "      <td>What was the total amount of JetWing Aviation'...</td>\n",
        "      <td>$250 million</td>\n",
-       "      <td></td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>['Mr. John Doe was appointed as CEO of ABC Edu...</td>\n",
        "      <td>Who was appointed as CEO of ABC Education Corp...</td>\n",
        "      <td>Mr. John Doe was appointed as CEO of ABC Educa...</td>\n",
-       "      <td></td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>[\"V. Lewis's chief complaint is fever, cough, ...</td>\n",
        "      <td>According to the hospitalization records of Ne...</td>\n",
        "      <td>Fever, cough, and chest pain for 5 days.</td>\n",
-       "      <td></td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>[\"H. Walker's birthdate is 19th July, 1964 acc...</td>\n",
        "      <td>According to the court judgment of Riverton, H...</td>\n",
-       "      <td>18th July, 1964</td>\n",
-       "      <td></td>\n",
+       "      <td>19th July, 1964</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>['The residence of Z. Torres was 22, Maple Ave...</td>\n",
        "      <td>According to the court judgment of Sterling, Q...</td>\n",
        "      <td>22, Maple Avenue, Quarryville</td>\n",
-       "      <td></td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -306,35 +306,35 @@
        "      <td>['Retail Emporium uses a risk management syste...</td>\n",
        "      <td>What system does Retail Emporium have in place...</td>\n",
        "      <td>Retail Emporium conducts regular audits and ri...</td>\n",
-       "      <td></td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>200</th>\n",
        "      <td>['Retail Emporium was established in November ...</td>\n",
        "      <td>When was Retail Emporium established?</td>\n",
-       "      <td>Retail Emporium was established in November 2005.</td>\n",
-       "      <td></td>\n",
+       "      <td>December 2005</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>201</th>\n",
        "      <td>['Retail Emporium distributed a dividend of $4...</td>\n",
        "      <td>How much dividend did Retail Emporium distribu...</td>\n",
        "      <td>$4 million</td>\n",
-       "      <td></td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>202</th>\n",
        "      <td>['Retail Emporium opened three new stores in M...</td>\n",
        "      <td>How many new stores did Retail Emporium open i...</td>\n",
-       "      <td>Five new stores.</td>\n",
-       "      <td></td>\n",
+       "      <td>Retail Emporium opened three new stores in Mar...</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>203</th>\n",
        "      <td>[\"Retail Emporium's operating income in 2020 w...</td>\n",
        "      <td>What was Retail Emporium's operating income in...</td>\n",
        "      <td>Retail Emporium's operating income in 2020 was...</td>\n",
-       "      <td></td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -368,36 +368,23 @@
        "202  How many new stores did Retail Emporium open i...   \n",
        "203  What was Retail Emporium's operating income in...   \n",
        "\n",
-       "                                    generated_response  \\\n",
-       "0                                         $250 million   \n",
-       "1    Mr. John Doe was appointed as CEO of ABC Educa...   \n",
-       "2             Fever, cough, and chest pain for 5 days.   \n",
-       "3                                      18th July, 1964   \n",
-       "4                        22, Maple Avenue, Quarryville   \n",
-       "..                                                 ...   \n",
-       "199  Retail Emporium conducts regular audits and ri...   \n",
-       "200  Retail Emporium was established in November 2005.   \n",
-       "201                                         $4 million   \n",
-       "202                                   Five new stores.   \n",
-       "203  Retail Emporium's operating income in 2020 was...   \n",
-       "\n",
-       "    keypoints_hit_ratio_by_human_eval  \n",
-       "0                                      \n",
-       "1                                      \n",
-       "2                                      \n",
-       "3                                      \n",
-       "4                                      \n",
-       "..                                ...  \n",
-       "199                                    \n",
-       "200                                    \n",
-       "201                                    \n",
-       "202                                    \n",
-       "203                                    \n",
+       "                                    generated_response  keypoint_coverage  \n",
+       "0                                         $250 million                1.0  \n",
+       "1    Mr. John Doe was appointed as CEO of ABC Educa...                1.0  \n",
+       "2             Fever, cough, and chest pain for 5 days.                1.0  \n",
+       "3                                      19th July, 1964                1.0  \n",
+       "4                        22, Maple Avenue, Quarryville                1.0  \n",
+       "..                                                 ...                ...  \n",
+       "199  Retail Emporium conducts regular audits and ri...                1.0  \n",
+       "200                                      December 2005                0.0  \n",
+       "201                                         $4 million                1.0  \n",
+       "202  Retail Emporium opened three new stores in Mar...                1.0  \n",
+       "203  Retail Emporium's operating income in 2020 was...                1.0  \n",
        "\n",
        "[204 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,6 +402,7 @@
     "data.to_csv(\n",
     "    filepath_new,\n",
     "    index=False,\n",
+    "    columns=[\"query.content\", \"ground_truth.keypoints\", \"generated_response\", \"keypoint_coverage\"],\n",
     ")\n",
     "data"
    ]
