--- a/5-evaluate.ipynb
+++ b/5-evaluate.ipynb
@@ -101,27 +101,7 @@
    "execution_count": null,
    "id": "7ec5bd57",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[True]\n",
-      "1.0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0    None\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Generate keypoint coverage estimation\n",
     "import pandas as pd\n",
@@ -131,9 +111,6 @@
     "from utils import llm, io_helpers\n",
     "\n",
     "importlib.reload(llm)\n",
-    "\n",
-    "filename = \"evaluation/_queries_with_context_with_DQ_5_generations.csv\"\n",
-    "filename_new = \"evaluation/keypoint_eval/_queries_with_context_with_DQ_5_generations.csv\"\n",
     "\n",
     "\n",
     "def calc_keypoint_coverage(row, model: str = \"gpt-4.1\"):\n",
@@ -153,11 +130,26 @@
     "    return np.mean(response.keypoint_coverage).item()\n",
     "\n",
     "\n",
-    "data = pd.read_csv(filename, converters={\"ground_truth.keypoints\": ast.literal_eval})\n",
-    "data[\"keypoint_coverage\"] = data.apply(calc_keypoint_coverage, axis=1)\n",
+    "def generate_keypoint_coverage(filepath: str, filepath_new: str):\n",
+    "    if filepath == filepath_new:\n",
+    "        raise RuntimeError(\"Paths must differ!\")\n",
+    "    data = pd.read_csv(filename, converters={\"ground_truth.keypoints\": ast.literal_eval})\n",
+    "    data[\"keypoint_coverage\"] = data.apply(calc_keypoint_coverage, axis=1)\n",
+    "    data.to_csv(filepath_new, index=False)\n",
     "\n",
-    "data.to_csv(filename_new, index=False)"
+    "\n",
+    "filename = \"evaluation/_queries_with_context_without_DQ_5_generations.csv\"\n",
+    "filename_new = \"evaluation/keypoint_eval/_queries_with_context_without_DQ_5_generations.csv\"\n",
+    "# _ = generate_keypoint_coverage(filename, filename_new)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8be9be2a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
